apps/base/splunk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: splunk
  labels:
    toolkit.fluxcd.io/tenant: dev-team
    goldilocks.fairwinds.com/enabled: "true"
